public/stylesheets/style.css
* {
    padding: 0;
    scroll-behavior: smooth;
    overflow: hidden;
    font-family: 'Source Code Pro';

}

.header {
    background-color: #000;
    margin: 0;
    background-image: url(/images/35.png);
    background-size: cover;
    background-position: 80%;
    height: 100vh;
}



.dashboard-header {
    background-color: #000;
    margin: 0;
    background-image: url(/images/35.png);
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
}

main {
    background-color: #000;
    margin: 0;
    background-image: url(/images/35.png);
    background-size: cover;
    background-attachment: fixed;
    background-position: center;
}

.box {
    display: flex;
    flex-flow: column;
    height: 100vh;
}

.box .row.content {
    flex: 1 1 auto;
}

.site-info {
    position: absolute;
    top: 35vh;
    width: 100%;
    text-align: center;
    margin: auto;
    padding: 40px 250px;
    color: #fff;
}

.site-info a {
    text-decoration: none;
    color: #fff;
}

#login-modal-alert {
    margin-top: 20px;
}

footer {
    position: absolute;
    top: 90vh;
    width: 100%;
    text-align: center;
    color: #fff;
}

a {
    max-width: 100%;
}

img {
    max-width: 100%;
    height: auto;
}

.font-scp {
    font-family: 'Source Code Pro';
}

.font-asc {
    font-family: 'Amatic SC';
}

